--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,9 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #f7f7f7;
+  background-color: #e5e5e5;
 }
+
 .secondary-heading {
   font-size: 3.6rem;
   font-weight: 600;
@@ -126,6 +127,9 @@ button {
 }
 
 @media screen and (max-width: 480px) {
+  .secondary-heading {
+    font-size: 2.2rem;
+  }
   .slide .img-responsive {
     width: 90%;
     margin: 0 auto;
@@ -133,3 +137,151 @@ button {
 }
 /* End of Media Query */
 /* End of Trending brands */
+
+/* Browse All Categories */
+
+#browse-all-categories .secondary-heading span {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+#browse-all-categories .card {
+  width: 300px;
+  background: #ffffff;
+  box-shadow: 25px 17px 59px 11px rgba(0, 0, 0, 0.06);
+  border-radius: 30px;
+  transition: all 0.3s;
+}
+
+#browse-all-categories .card:hover {
+  transform: translateY(-0.8rem);
+  box-shadow: 25px 17px 59px 11px rgba(0, 0, 0, 0.09);
+}
+
+.card .card-text {
+  font-size: 2.4rem;
+  font-weight: 500;
+  color: #000;
+  padding: 1.5rem;
+  text-transform: capitalize;
+}
+
+#browse-all-categories a {
+  text-decoration: none;
+}
+#browse-all-categories [class*="col-"] {
+  margin-bottom: 4rem;
+}
+
+#browse-all-categories .show-all-btn {
+  width: 35rem;
+  height: 8rem;
+  background: #79271a;
+  font-size: 2.4rem;
+  font-weight: 500;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  text-transform: capitalize;
+  position: relative;
+  transition: all 0.3s;
+}
+
+#browse-all-categories .show-all-btn:active,
+#browse-all-categories .show-all-btn:focus {
+  box-shadow: none;
+}
+
+#browse-all-categories .show-all-btn span {
+  margin-left: 8px;
+  transition: all 0.3s;
+}
+#browse-all-categories .show-all-btn:hover {
+  background: #682116;
+}
+#browse-all-categories .show-all-btn:hover span {
+  margin-left: 15px;
+  transition: margin-left 0.2s;
+}
+
+#browse-all-categories .hidden-col {
+  display: none;
+}
+
+.show-all-btn .left-arrow {
+  transform: rotate(180deg);
+  margin-left: 8px;
+  transition: all 0.3s;
+}
+.show-all-btn:hover .left-arrow {
+  margin-left: -5px;
+}
+
+.show-all-btn .less {
+  display: none;
+}
+/* Media query  */
+
+@media screen and (min-width: 1366px) {
+  #browse-all-categories .secondary-heading {
+    margin: 6rem 0 7rem;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  #browse-all-categories .secondary-heading {
+    margin: 4.5rem 0;
+  }
+
+  #browse-all-categories [class*="col-"] {
+    margin: 1.5rem auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  #browse-all-categories .hidden-col {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  #browse-all-categories .show-all-btn {
+    width: 28rem;
+    font-size: 2rem;
+  }
+
+  .show-all-btn .more img,
+  .less img {
+    width: 25px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  #browse-all-categories [class*="col-"] {
+    margin: 0.7rem auto;
+  }
+
+  .card .card-text {
+    font-size: 1.8rem;
+    padding: 1.5rem;
+  }
+
+  #browse-all-categories .show-all-btn {
+    width: 25rem;
+    height: 6rem;
+    font-size: 1.5rem;
+    margin: 3rem 0;
+  }
+
+  #browse-all-categories .show-all-btn span {
+    margin-left: 5px;
+  }
+
+  #browse-all-categories .show-all-btn:hover span {
+    margin-left: 5px;
+  }
+}
+/* End of Media query  */
+/* End of Browse All Categories */
