--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  /* background: url("banner-bg.svg"); */
   background: -webkit-gradient(
     linear,
     left top,
@@ -656,6 +655,7 @@ body {
   }
 }
 /* End of Features  */
+
 /* Sponsors  */
 /* .logo-col img:not(:last-of-type) {
   margin-right: 6.7rem;
@@ -700,27 +700,24 @@ body {
     margin-right: 1rem;
   }
 
-
   #features h3 {
-  font-size: 2rem;
-}
+    font-size: 2rem;
+  }
 
-#features small {
-  font-size: 1.5rem;
-}
-.feature-icon{
-  width: 77px;
-}
+  #features small {
+    font-size: 1.5rem;
+  }
+  .feature-icon {
+    width: 77px;
+  }
 
+  #features .feature-icon-middle {
+    width: 120px;
+  }
 
-#features .feature-icon-middle {
-  width: 120px;
-}
-
-.feature-middle-text {
-  top: -5.5rem;
-}
-
+  .feature-middle-text {
+    top: -5.5rem;
+  }
 }
 /* End of Sponsors  */
 
@@ -801,7 +798,6 @@ body {
 
 .promo-slider img {
   width: 100%;
-  height: 100%;
   min-height: 380px;
   object-fit: cover;
   border-radius: 5px;
@@ -855,7 +851,7 @@ body {
   }
 
   .promo-slider {
-    width: 80%;
+    width: 90%;
   }
 
   .offer {
@@ -865,7 +861,7 @@ body {
 }
 @media screen and (max-width: 992px) {
   .promo-slider {
-    width: 90%;
+    width: 95%;
   }
 
   .offer {
@@ -876,14 +872,20 @@ body {
   .promo-slider {
     width: 100%;
   }
+}
 
+@media screen and (max-width: 761px) {
   .offer {
     width: 85%;
   }
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 575px) {
   #promotions {
     margin-bottom: 2.8rem;
+  }
+
+  #promotions .secondary-heading {
+    margin-bottom: 3.5rem;
   }
 
   .promo-slider {
@@ -1020,7 +1022,7 @@ body {
   }
 
   #trending-brands .secondary-heading {
-    margin-bottom: 3rem;
+    margin-bottom: 3.5rem;
   }
 
   .slider {
